--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-focus-tracker",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Focus tracker to help improve UX",
   "main": "dist/index.js",
   "keywords": [
@@ -18,7 +18,7 @@
     "prepublishOnly": "npm run build"
   },
   "author": "Kshitiz Sachan",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.9",
